[package]
name = "AWSTT"
description = "Advanced WiFi Statistics and Testing Tool"
authors = ["TonSHd"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "AWSTT"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.28", features = ["default"] }
egui = "0.28"
egui_plot = "0.28"
cpal = "0.15"
parking_lot = "0.12"

[profile.release]
opt-level = 3
